// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    1,996.95$
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with no expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expenses
     totalling 
    0$
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    1.95$
  </h3>
</div>
`;
